--- a/src/main/resources/templates/sbu/action-codes/display.html
+++ b/src/main/resources/templates/sbu/action-codes/display.html
@@ -6,7 +6,8 @@
     <button class="btn btn-outline-secondary dropdown-toggle" type="button"
       data-bs-toggle="dropdown" aria-expanded="false">
       <span class="fas fa-code"></span>
-      [[${#messages.msgOrNull('sbu.actioncode.action') ?: 'Action'}]]</button>
+      [[${actionDisplay != null ? actionDisplay : #messages.msgOrNull('sbu.actioncode.action') ?:
+      'Action'}]]</button>
     <ul class="dropdown-menu dropdown-menu-end">
       <li>
         <a class="dropdown-item" href="#" onclick="copyActionCodeUrl()">
