Add tool-bar :: bs5

--- a/src/main/resources/templates/sbu/action-codes/tool-bar.html
+++ b/src/main/resources/templates/sbu/action-codes/tool-bar.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bar(ajaxTargetId)">
+<div th:fragment="bs5(ajaxTargetId)">
   <div class="input-group mb-3">
     <input id="actionCodeInput" type="text" class="form-control" th:value="${code}" readonly="true">
     <button class="btn btn-outline-secondary dropdown-toggle" type="button"
