--- a/src/main/resources/templates/sbu/attachments/panel.html
+++ b/src/main/resources/templates/sbu/attachments/panel.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="panel" class="p-2 border rounded-3 border-primary">
+<div th:fragment="bs5" class="p-2 border rounded-3 border-primary">
 
   <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
     <li class="nav-item">
@@ -84,12 +84,5 @@
 
 </div>
 
-<div th:fragment="edit">
-  <div th:replace="~{sbu/jsf/form :: edit(backable=${false})}"></div>
-</div>
-
-<div th:fragment="upload">
-  <div th:replace="~{sbu/jsf/form :: new(backable=${false})}"></div>
-</div>
 
 </html>
