--- a/src/main/resources/templates/sbu/fsm/content-editor.html
+++ b/src/main/resources/templates/sbu/fsm/content-editor.html
@@ -1,37 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bar"
-  th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}"
-  class="card mb-2">
-  <div class="card-body">
-    <div class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
-      <button type="button" class="btn btn-outline-primary">
-        <i class="fas fa-route"></i>
-        [[${item.phase.stateMachine.state.displayName}]]
-      </button>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-outline-success">
-          <i class="fas fa-location-arrow"></i>
-        </button>
-        <th:block th:each="trigger : ${item.phase.externalTriggers}">
-          <button type="button" class="btn btn-outline-success"
-            hx:get="${item.joinPath('triggers', trigger.name)}" hx:target="${'#' + ajaxTargetId}"
-            hx-ext="json-enc">[[${trigger.displayName}]]</button>
-        </th:block>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div th:fragment="status" th:with="item=${__${@webModelAttributes.ITEM_NAME}__}"
-  class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
-  <button type="button" class="btn btn-outline-primary">
-    <i class="fas fa-diagram-project"></i>
-    [[${item.phase.stateMachine.state.displayName}]]
-  </button>
-</div>
-
-<div th:fragment="editor"
+<div th:fragment="bs5"
   th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, fid=${(T(java.lang.Math).random() * 10000).intValue()}">
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
@@ -47,7 +16,7 @@
   <div class="tab-content">
     <div class="tab-pane fade show active" th:id="${'mainForm' + fid}" role="tabpanel">
       <div
-        th:replace="~{sbu/jsf/form :: show-edit-alt(editable=${item.phase.updatable.accessControlRuleStock.getAsBoolean}, item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE})}">
+        th:replace="~{sbu/jsf/show-edit-alt :: bs5(editable=${item.phase.updatable.accessControlRuleStock.getAsBoolean}, item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${ajaxTargetId ?: @webModelAttributes.AJAX_TARGET_ID_VALUE})}">
       </div>
     </div>
     <div th:if="${item.phase.stateRecord.hasViewableForm(item.phase.stateMachine)}"
