--- a/src/main/resources/templates/sbu/attachments/panel.html
+++ b/src/main/resources/templates/sbu/attachments/panel.html
@@ -36,7 +36,7 @@
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               aria-expanded="false"
               th:attr="data-bs-target='#collapse_' + ${groupIndex.index}, aria-controls='collapse_' + ${groupIndex.index}">
-              [[${fileGroup}]]
+              [[${#messages.msgOrNull('sbu.attachment.group.' + fileGroup) ?: fileGroup}]]
             </button>
           </h2>
           <div th:id="'collapse_' + ${groupIndex.index}" class="accordion-collapse collapse"
