--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -89,13 +89,13 @@
             </button>
             <ul class="dropdown-menu">
               <li>
-                <a th:classappend="${user == null || (user != null && user.canUpdate(item))} ? 'text-primary' : 'disabled'"
+                <a th:classappend="${user == null || user.canUpdate(item)} ? 'text-primary' : 'disabled'"
                   hx:get="${queryConfig == null ? item.editPath : item.getEditPath(queryConfig)}"
                   hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" class="dropdown-item">
                   [[${#messages.msgOrNull('sbu.ui.edit') ?: 'Edit'}]]</a>
               </li>
               <li>
-                <a th:classappend="${user == null || (user != null && user.canDelete(item))} ? 'text-danger' : 'disabled'"
+                <a th:classappend="${user == null || user.canDelete(item)} ? 'text-danger' : 'disabled'"
                   hx:delete="${queryConfig == null ? item.deletePath : item.getDeletePath(queryConfig)}"
                   hx:confirm="${#messages.msgOrNull('sbu.ui.confirmation.delete') ?: 'Are you sure?'}"
                   hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" class="dropdown-item">
