--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -14,7 +14,13 @@
         hx-ext="json-enc">
         <th:block th:each="field : ${queryConfig.fields}">
           <div class="col-8">
-            <label class="form-label">
+            <label class="form-label" th:if="${#messages.msgOrNull('sbu.web.datatable.field.' + itemClass.simpleName + '.' +
+            field) != null}">
+              [[${#messages.msgOrNull('sbu.web.datatable.field.' + itemClass.simpleName + '.' +
+              field)}]]
+            </label>
+            <label class="form-label" th:unless="${#messages.msgOrNull('sbu.web.datatable.field.' + itemClass.simpleName + '.' +
+            field) != null}">
               [[${#messages.msgOrNull('sbu.web.item.field.' + itemClass.simpleName + '.' +
               field) ?:
               field}]]
