--- a/src/main/resources/templates/sbu/jsf/resources.html
+++ b/src/main/resources/templates/sbu/jsf/resources.html
@@ -10,7 +10,7 @@
   <link href="/react-form/css/glyphicon.min.css" rel="stylesheet" />
 
   <!-- Webpack -->
-  <script src="/react-form/main.js" defer></script>
+  <script src="/react-form/webpack/main.js" defer></script>
 </th:block>
 
 </html>
