Made datatable search without ajax

--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -10,8 +10,9 @@
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
     </div>
     <div th:if="${queryConfig}" class="offcanvas-body">
-      <form class="row g-3" hx:get="${route.indexPath}" hx:target="${'#' + ajaxTargetId}"
-        hx-ext="json-enc">
+      <!-- <form class="row g-3" hx:get="${route.indexPath}" hx:target="${'#' + ajaxTargetId}"
+        hx-ext="json-enc"> -->
+      <form class="row g-3" method="GET" th:action="${route.indexPath}">
         <th:block th:each="field : ${queryConfig.fields}">
           <div class="col-8">
             <label class="form-label" th:if="${#messages.msgOrNull('sbu.web.datatable.field.' + itemClass.simpleName + '.' +
