--- a/src/main/resources/templates/sbu/action-codes/actionbar.html
+++ b/src/main/resources/templates/sbu/action-codes/actionbar.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bs5(actionCodeEnum)">
+<div th:fragment="bs5(actionCodeEnum)" th:with="singular=${singular ?: false}">
   <div class="d-flex justify-content-end btn-group" role="group">
     <button th:each="action : ${actionCodeEnum}" class="btn btn-sm btn-outline-secondary rounded-0"
       type="button" data-bs-toggle="collapse" th:attr="data-bs-target=${'#collapse' + action}"
@@ -11,7 +11,7 @@
   <div class="mt-3">
     <div th:each="action : ${actionCodeEnum}" class="collapse" th:id="${'collapse' + action}">
       <div th:id="${'actionCode' + action}">
-        <a hx:get="@{${item.joinPath('action-codes', action)}(ajaxTargetId=${'actionCode' + action})}"
+        <a hx:get="@{${singular ? route.joinPath('action-codes', action) : item.joinPath('action-codes', action)}(ajaxTargetId=${'actionCode' + action})}"
           hx:target="${'#actionCode' + action}" hx-ext="json-enc" hx-trigger="load"
           class="d-none"></a>
       </div>
