--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -85,6 +85,20 @@
   </div>
   <!-- Filter Options End-->
 
+  <style>
+    @media (max-width: 767px) {
+      .table-responsive .dropdown-menu {
+        position: static !important;
+      }
+    }
+
+    @media (min-width: 768px) {
+      .table-responsive {
+        overflow: inherit;
+      }
+    }
+  </style>
+
   <div class="table-responsive">
     <table class="table">
       <thead>
