--- a/src/main/resources/templates/sbu/jsf/show-edit.html
+++ b/src/main/resources/templates/sbu/jsf/show-edit.html
@@ -5,29 +5,25 @@
   class="card">
   <div class="card-header">
     <div class="d-flex">
-      <button th:if="${backable}"
-        hx:get="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+      <button th:if="${backable}" hx:get="${item.getBackPath(queryConfig)}"
         hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
         aria-label="Close"></button>
       <a th:if="${user == null || user.canUpdate(item)}" class="pe-2 orange"
-        th:href="${queryConfig == null ? item.editPath : item.getEditPath(queryConfig)}"
-        hx:get="@{${item.editPath}(ajaxTargetId=${embeddedTargetId}, backTargetId=${backTargetId})}"
+        hx:get="@{${item.getEditPath(queryConfig)}(ajaxTargetId=${embeddedTargetId}, backTargetId=${backTargetId})}"
         hx:target="${'#' + embeddedTargetId}" hx-ext="json-enc">
         <i class="fas fa-edit"></i></a>
     </div>
   </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
-    <react-form th:id="${'showEditForm' + rid}"
-      th:action="${queryConfig == null ? item.backPath : item.getBackPath(queryConfig)}"
+    <react-form th:id="${'showEditForm' + rid}" th:action="${item.getBackPath(queryConfig)}"
       method="GET" ajax:target="${ajaxTargetId}" disabled="true">
-      <th:block th:if="${item.hasBackPathname}">
-        <div></div>
-      </th:block>
-      <th:block th:unless="${item.hasBackPathname}">
-        <button class="btn btn-light" type="submit">[[${#messages.msgOrNull('sbu.ui.return') ?:
-          'Return'}]]</button>
-      </th:block>
+      <div></div>
     </react-form>
+    <th:block th:unless="${item.hasBackPathname}">
+      <a class="btn btn-light" hx:get="${item.getBackPath(queryConfig)}"
+        hx:target="${'#' + backTargetId}" hx-ext="json-enc">
+        [[${#messages.msgOrNull('sbu.ui.return') ?: 'Return'}]]</a>
+    </th:block>
 
     <div
       th:if="${T(com.github.wnameless.spring.boot.up.attachment.AttachmentSnapshotAware).isAssignableFrom(item.class)}"
